# Course_work_4

./: README.md  config.py  main.py  pyproject.toml
data/: vacancies.json
src/: FileManager.py  HH_API.py  Vacancy.py
tests/: test_Vacancy.py
