[tool.poetry]
name = "skypro-course-work-4"
version = "0.1.0"
description = ""
authors = ["Oleg Zaslavskii <Zasoleg1995@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
